# minisat

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README  README.txt  appveyor.yml  cmake_uninstall.cmake.in  core  licence.txt  minisatConfig.cmake.in  mtl  readme.txt  simp  utils
.github/workflows/: build-and-test.yml  build-maxsat.yml  build-werror.yml  check-diversity.yml  check-style.yml  mini-competition.yml  unit-tests.yml
core/: BoundedQueue.h  Constants.h  Dimacs.h  Main.C  Main.cc  Makefile  Solver.C  Solver.cc  Solver.h  SolverTypes.h
core/CVS/: Entries  Repository
doc/: ReleaseNotes-Glucose-2.1.txt
doc/solver_description/: Makefile  local.bib  mergesat.tex  sparrow2mergesat.bib  sparrow2mergesat.tex
lib/: libs.spec
minisat/core/: BoundedQueue.h  Constants.h  Dimacs.h  Main.cc  Makefile  OnlineProofChecker.h  Solver.cc  Solver.h  SolverTypes.h  ipasir.h
minisat/mtl/: Alg.h  Alloc.h  Heap.h  IntMap.h  IntTypes.h  Map.h  Queue.h  Sort.h  Vec.h  XAlloc.h  template.mk
minisat/simp/: Main.cc  Makefile  SimpSolver.cc  SimpSolver.h  ipasir.cc
minisat/tests/: TestSolver.h  sat-simple.cc
minisat/utils/: Options.cc  Options.h  ParseUtils.h  StreamBuffer.h  System.cc  System.h  ccnr.cc  ccnr.h
mtl/: Alg.h  Alloc.h  BasicHeap.h  BoxedVec.h  Heap.h  IntTypes.h  Map.h  Queue.h  Rank.h  Set.h  Sort.h  Vec.h  XAlloc.h  template.mk
mtl/CVS/: Entries  Repository
simp/: Main.C  Main.cc  Makefile  SimpSolver.C  SimpSolver.cc  SimpSolver.h
simp/CVS/: Entries  Repository  Root
tools/: check-solver-behavior.sh  check-style.sh  ci.sh  container-default-command.sh  format-style.sh  inject-thp-glibc.sh  make-ipasir.sh  make-starexec.sh  par2-table.sh  run_in_container.sh
tools/checker/: check-drat.sh  fuzz-check-configurations.sh  fuzz-check-diversity.sh  fuzz-drat.sh  fuzzcheck.sh  prepare.sh  toolCheck.sh  verify_model.c
tools/ci/: mini-competition.sh
tools/ci/maxsat/UWrMaxSat/: config.mk  test-UWrMaxSat.sh
tools/dockerfile/: Dockerfile
tools/eda-ai/: README  build.sh  license.txt  run_config1.sh  run_config2.sh  run_config3.sh  run_config_default.sh
tools/ipasir_template/: LIBS  makefile
tools/starexec_template/: starexec_build
utils/: Options.C  Options.cc  Options.h  ParseUtils.h  System.C  System.cc  System.h
